--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -62,10 +62,10 @@
             <div class="voo">
                 <p><strong>Origem:</strong> {{ voo.origem }}</p>
                 <p><strong>Destino:</strong> {{ voo.destino }}</p>
-                <p><strong>Data de partida:</strong> {{ voo.data_partida }}</p>
-                <p><strong>Data de retorno:</strong> {{ voo.data_retorno }}</p>
-                <p><strong>Preço:</strong> €{{ voo.preco }}</p>
-                <p><a href="{{ voo.link }}" target="_blank">Ver mais detalhes</a></p>
+                <p><strong>Partida:</strong> {{ voo.data_partida }}</p>
+                <p><strong>Retorno:</strong> {{ voo.data_retorno }}</p>
+                <p><strong>Preço:</strong> {{ voo.preco }}</p>
+                <p><a href="{{ voo.link }}" target="_blank">Ver detalhes</a></p>
             </div>
         {% endfor %}
     {% else %}
@@ -73,3 +73,4 @@
     {% endif %}
 </body>
 </html>
+
